Added foreign investment

--- a/code/BA - data preparation.Rmd
+++ b/code/BA - data preparation.Rmd
@@ -48,6 +48,8 @@ material_footprint <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis
 # 15:
 forest_area <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/gapminder/forest_area.csv",show_col_types = FALSE)
 
+foreign_investment <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/gapminder/foreign_direct_investment_net_inflows_percent_of_gdp.csv",show_col_types = FALSE)
+
 # democracy <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/gapminder/demox_eiu.csv",show_col_types = FALSE)
 
 # Output
@@ -114,6 +116,7 @@ income <- income[ , !(names(income) %in% drops)]
 income_share_20 <- income_share_20[ , !(names(income_share_20) %in% drops)]
 CO2 <- CO2[ , !(names(CO2) %in% drops)]
 murder <- murder[ , !(names(murder) %in% drops)]
+foreign_investment <- foreign_investment[ , !(names(foreign_investment) %in% drops)]
 
 # OurWorldInData
 
@@ -140,6 +143,7 @@ income <- income %>% gather("year", "value", -country)
 income_share_20 <- income_share_20 %>% gather("year", "value", -country)
 CO2 <- CO2 %>% gather("year", "value", -country)
 murder <- murder %>% gather("year", "value", -country)
+foreign_investment<- foreign_investment %>% gather("year", "value", -country)
 ```
 
 ## Change data types of columns
@@ -166,6 +170,7 @@ income <- income %>% mutate(year = as.numeric(year))
 income_share_20 <- income_share_20 %>% mutate(year = as.numeric(year))
 CO2 <- CO2 %>% mutate(year = as.numeric(year))
 murder <- murder %>% mutate(year = as.numeric(year))
+foreign_investment <- foreign_investment %>% mutate(year = as.numeric(year))
 ```
 
 ## Handle differences in naming conventions
@@ -260,6 +265,7 @@ for (country in 1:nrow(nc)) {
   
   murder[murder == as.character(nc[country,1])] <- as.character(nc[country,2])
   
+  foreign_investment[foreign_investment == as.character(nc[country,1])] <- as.character(nc[country,2])
 
 }
 ```
@@ -284,6 +290,7 @@ income$dmu <- str_c(income$country, "_", income$year)
 income_share_20$dmu <- str_c(income_share_20$country, "_", income_share_20$year)
 CO2$dmu <- str_c(CO2$country, "_", CO2$year)
 murder$dmu <- str_c(murder$country, "_", murder$year)
+foreign_investment$dmu <- str_c(foreign_investment$country, "_", foreign_investment$year)
 
 women_in_parliament$country <- NULL
 basic_sanitation$country <- NULL
@@ -302,6 +309,7 @@ income$country <- NULL
 income_share_20$country <- NULL
 CO2$country <- NULL
 murder$country <- NULL
+foreign_investment$country <- NULL
 
 women_in_parliament$year <- NULL
 basic_sanitation$year <- NULL
@@ -320,6 +328,7 @@ income$year <- NULL
 income_share_20$year <- NULL
 CO2$year <- NULL
 murder$year <- NULL
+foreign_investment$year <- NULL
 
 women_in_parliament <- women_in_parliament %>% relocate(dmu)
 basic_sanitation <- basic_sanitation %>% relocate(dmu)
@@ -338,6 +347,7 @@ income <- income %>% relocate(dmu)
 income_share_20 <- income_share_20 %>% relocate(dmu)
 CO2 <- CO2 %>% relocate(dmu)
 murder <- murder %>% relocate(dmu)
+foreign_investment <- foreign_investment %>% relocate(dmu)
 ```
 
 ## Save individual data sets as csvs
@@ -360,4 +370,5 @@ write_csv(income, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/pre
 write_csv(income_share_20, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/income_share_20.csv")
 write_csv(CO2, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/CO2.csv")
 write_csv(murder, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/murder.csv")
+write_csv(foreign_investment, "D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/foreign_investment.csv")
 ```
