--- a/code/BA - data merger.Rmd
+++ b/code/BA - data merger.Rmd
@@ -30,6 +30,7 @@ income <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/pr
 income_share_20 <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/income_share_20.csv",show_col_types = FALSE)
 CO2 <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/CO2.csv",show_col_types = FALSE)
 murder <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/murder.csv",show_col_types = FALSE)
+foreign_investment <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/foreign_investment.csv",show_col_types = FALSE)
 ```
 
 # General information about data sets
@@ -380,7 +381,7 @@ write_final(final_18)
 
 -\> dmus
 
-```{write_final(final_18)}
+``` {write_final(final_18)}
 ```
 
 ## Attempt 17 - 2 datasets
