--- a/BA - data preparation - 2.Rmd
+++ b/BA - data preparation - 2.Rmd
@@ -1,27 +1,39 @@
 ---
 title: "BA - data preparation - 2"
 output: html_notebook
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
 # Preparation of the chosen data sets
 
 The chosen inputs are:
-- CO2
-- material footprint
-- government debts
-- foreign direct investment
+
+-   CO2
+
+-   material footprint
+
+-   government debts
+
+-   foreign direct investment
 
 The chosen outputs are
-- life expectancy
-- income
-- mean years of schooling
-- murder rate
-- income share of lowest 20 percent
 
+-   life expectancy
 
-Both inputs and output data sets need to be adjusted according to the input oriented DEA. 
-Inputs should be minimized, outputs should be maximized to achieve optimal results. Also, all data must be strictly positive.
+-   income
 
+-   mean years of schooling
+
+-   murder rate
+
+-   income share of lowest 20 percent
+
+Both inputs and output data sets need to be adjusted according to the
+input oriented DEA. Inputs should be minimized, outputs should be
+maximized to achieve optimal results. Also, all data must be strictly
+positive.
 
 ```{r}
 library(tidyverse) 
@@ -32,54 +44,133 @@ source("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/code/functions.R")
 ## Load data
 
 ```{r}
-# Inputs:
-material_footprint <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/material_footprint.csv",show_col_types = FALSE)
-CO2 <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/CO2.csv",show_col_types = FALSE)
-foreign_investment <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/foreign_investment.csv",show_col_types = FALSE)
-
-# Outputs:
-mean_years_in_school <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/mean_years_in_school.csv",show_col_types = FALSE)
-life_expectancy <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/life_expectancy.csv",show_col_types = FALSE)
-income <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/income.csv",show_col_types = FALSE)
-income_share_20 <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/income_share_20.csv",show_col_types = FALSE)
-murder <- read_csv("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/raw_data/preprocessed_data/murder.csv",show_col_types = FALSE)
+data <- read_final(12)
+str(data)
 ```
 
 In the next part we will adapt all data sets accordingly
 
-## Merge data
+## Adjustment of data
+
+Foreign direct investment has the wrong data type
 
 ```{r}
 
+data$foreign_investment <- as.numeric(gsub("−", "-",data$foreign_investment))
 ```
-
-
-## Adjustmenr of data
 
 ### Material footprint
-Material footprint is an input.We define, that the material foortprint needs to be as small as possible in order to be optimal. 
+
+Material footprint is an input.We define, that the material footprint
+needs to be as small as possible in order to be optimal.
+
 ```{r}
-glimpse(material_footprint)
+glimpse(data$material_footprint)
 ```
+
 ```{r}
-min(material_footprint$value)
+min(data$material_footprint)
 ```
+
 All values are above 0. The direction of the data is also correct.
 
 ### CO2
+
 CO2 is an input. The less CO2 emissions, the better.
+
 ```{r}
-min(CO2$value, na.rm = TRUE)
+min(data$CO2, na.rm = TRUE)
 ```
-CO2 has values of 0.
+
+CO2 has no values of 0.
+
 ```{r}
 check0(CO2$value)
 ```
 
+### Foreign direct investment
+
+The more foreign direct investment, the better. As it says the more the
+better we need to adapt the scale to achieve the less the better
+
+```{r}
+min(data$foreign_investment)
+max(data$foreign_investment)
+```
+
+Also, the data includes values of 0 and below. We need to deal with both
+the negative values as well as the direction of the data set. The
+minimum values is -57.5 (Luxembourg 2007), the maximum value 449 (Malta
+2007)
+
+**Handling of negative values**
+
+In order to get only positive values, I will add 57.4 to each value.
+
+```{r}
+data$foreign_investment <- data$foreign_investment + 57.4
+```
+
+**Handling of direction**
+
+Inputs must follow the direction of the less the better. I will mirror
+each value along the middle between min and max
+
+```{r}
+mirror <- (max(data$foreign_investment) - min(data$foreign_investment)) / 2
+
+data$foreign_investment <- mirror + (mirror - data$foreign_investment)
 
 
+```
 
+Now, Luxembourg 2007 and Malta 2007 switched places
 
+### Government debts
 
+No data yet
 
+### Life expectancy
 
+The more the better \<- Already fits the model
+
+It cannot be below 0. No adjustment needed
+
+### Income
+
+The more the better \<- Already fits
+
+It cannot be below 0. No adjustment needed
+
+### Mean years of schooling
+
+The more the better \<- perfect
+
+It cannot be below 0. No adjustment needed
+
+### Murder rate
+
+The lower the better \<- needs to be adjusted
+
+**Handling of direction**
+
+This data shows the amount of murders per 100k people. To adjust the
+direction of the data I will simply use the No-murder rate :) As the
+numbers will be very high I will divide them by 1000
+
+```{r}
+data$murder <- (100000 - data$murder) / 1000
+```
+
+### Income share of lowest 20 %
+
+The higher the better \<- good
+
+It cannot be below 0. No adjustment needed
+
+## Export adjusted data set
+
+```{r}
+final_112 <- data
+write_final(final_112)
+```
