--- a/code/BA - DEA.Rmd
+++ b/code/BA - DEA.Rmd
@@ -10,6 +10,8 @@ library(tidyverse)
 library(deaR)
 library(ggplot2)
 library(countrycode)
+
+source("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/code/functions.R")
 ```
 
 Country groups
@@ -22,7 +24,9 @@ Europe <- regions$country[regions$continent == "Europe"]
 Americas <- regions$country[regions$continent == "Americas"]
 Asia <- regions$country[regions$continent == "Asia"]
 Oceania <- regions$country[regions$continent == "Oceania"]
-EU <- regions$country[regions$EU == TRUE] 
+EU <- regions$country[regions$EU == TRUE]
+OECD <- regions$country[regions$OECD == TRUE]
+
 ```
 
 # Preparation
@@ -43,11 +47,11 @@ EU <- regions$country[regions$EU == TRUE]
 
 ```{r}
 # Chose the attempt
-attempt = 15
+attempt = 112
 
 # Number of in- and outputs -> checl struture of selected data set!
-number_of_inputs <- 1
-number_of_outputs <- 1
+number_of_inputs <- 3
+number_of_outputs <- 4
 
 # location of inputs and outputs
 input_cols <- c()
@@ -60,7 +64,7 @@ from_1990 <- "no"
 only_one_year <- 0 # 0 means no
 
 # onyl specified chosen_countries?
-chosen_countries <- c("Germany") # enter a vector with strings; empty means all
+chosen_countries <- c() # enter a vector with strings; empty means all
 
 orientation <- "io"
 # io: input oriented
@@ -77,7 +81,7 @@ return_to_scale <- "vrs"
 ### Load data
 
 ```{r}
-data = read_csv(paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/final_", as.character(attempt), ".csv", sep = ""), show_col_types = FALSE)
+data = read_final(attempt)
 str(data)
 ```
 
@@ -108,7 +112,7 @@ if (!is.null(chosen_countries)) {
   
 ```
 
-## Combine country and year to one string to use it as a name for the DMUs
+### Delete country and year column
 
 ```{r}
 data$country <- NULL
@@ -193,6 +197,38 @@ data_dea$continent <- countrycode(sourcevar = data_dea$country,
 ## export as csv
 
 create name for the file
+
+```{r}
+filename <- paste(as.character(attempt), "_", orientation, "_", return_to_scale, sep = "")
+
+if (from_1990 != "no") {
+  filename <- paste(filename, "_", "from1990", sep = "")
+}
+
+if (only_one_year != 0) {
+  filename <- paste(filename, "_", as.character(only_one_year), sep = "")  
+}
+
+if (!is.null(chosen_countries)) {
+  if (is_empty(setdiff(Europe, chosen_countries))) {
+    filename <- paste(filename, "_", "Europe", sep = "")
+  } else if (is_empty(setdiff(Americas, chosen_countries))) {
+    filename <- paste(filename, "_", "Americas", sep = "")
+  } else if (is_empty(setdiff(EU, chosen_countries))) {
+    filename <- paste(filename, "_", "EU", sep = "")
+  } else if (is_empty(setdiff(Africa, chosen_countries))) {
+    filename <- paste(filename, "_", "Africa", sep = "")
+  } else if (is_empty(setdiff(Asia, chosen_countries))) {
+    filename <- paste(filename, "_", "Asia", sep = "")
+  } else if (length(chosen_countries) == 1) {
+    filename <- paste(filename, "_", as.character(chosen_countries[1]), sep = "")
+  } else {
+    filename <- paste(filename, "_", "notAllCountries", sep = "")
+  }
+}
+
+write_csv(data_dea, paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/dea_results_", filename, ".csv", sep = ""))
+```
 
 ```{r}
 filename <- paste(as.character(attempt), "_", orientation, "_", return_to_scale, sep = "")
