--- a/code/BA - DEA.Rmd
+++ b/code/BA - DEA.Rmd
@@ -26,6 +26,7 @@ Asia <- regions$country[regions$continent == "Asia"]
 Oceania <- regions$country[regions$continent == "Oceania"]
 EU <- regions$country[regions$EU == TRUE]
 OECD <- regions$country[regions$OECD == TRUE]
+Selection_01 <- regions$country[regions$selection_01 == TRUE]
 
 ```
 
@@ -220,38 +221,8 @@ if (!is.null(chosen_countries)) {
     filename <- paste(filename, "_", "Africa", sep = "")
   } else if (is_empty(setdiff(Asia, chosen_countries))) {
     filename <- paste(filename, "_", "Asia", sep = "")
-  } else if (length(chosen_countries) == 1) {
-    filename <- paste(filename, "_", as.character(chosen_countries[1]), sep = "")
-  } else {
-    filename <- paste(filename, "_", "notAllCountries", sep = "")
-  }
-}
-
-write_csv(data_dea, paste("D:/Daten/Bildung/HS Mannheim/BA/bachelors-thesis/processed_data/dea_results_", filename, ".csv", sep = ""))
-```
-
-```{r}
-filename <- paste(as.character(attempt), "_", orientation, "_", return_to_scale, sep = "")
-
-if (from_1990 != "no") {
-  filename <- paste(filename, "_", "from1990", sep = "")
-}
-
-if (only_one_year != 0) {
-  filename <- paste(filename, "_", as.character(only_one_year), sep = "")  
-}
-
-if (!is.null(chosen_countries)) {
-  if (is_empty(setdiff(Europe, chosen_countries))) {
-    filename <- paste(filename, "_", "Europe", sep = "")
-  } else if (is_empty(setdiff(Americas, chosen_countries))) {
-    filename <- paste(filename, "_", "Americas", sep = "")
-  } else if (is_empty(setdiff(EU, chosen_countries))) {
-    filename <- paste(filename, "_", "EU", sep = "")
-  } else if (is_empty(setdiff(Africa, chosen_countries))) {
-    filename <- paste(filename, "_", "Africa", sep = "")
-  } else if (is_empty(setdiff(Asia, chosen_countries))) {
-    filename <- paste(filename, "_", "Asia", sep = "")
+  } else if (is_empty(setdiff(Selection_01, chosen_countries))) {
+    filename <- paste(filename, "_", "Selection_01", sep = "")
   } else if (length(chosen_countries) == 1) {
     filename <- paste(filename, "_", as.character(chosen_countries[1]), sep = "")
   } else {
